feat: implementar o caso de uso de buscar os tipos de acampamento.